k8s/base-infra/kiali/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /kiali
  labels:
    app: kiali
spec:
  rules:
    - host: home-server
      http:
        paths:
          - backend:
              service:
                name: kiali
                port:
                  name: http
            path: /kiali
            pathType: Prefix
